--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,8 @@ jobs:
     runs-on: windows-latest
     permissions:
       contents: read
+    outputs:
+      libdatadog_version: ${{ steps.version.outputs.LIBDATADOG_VERSION }}
     
     steps:
       - name: Checkout code
@@ -74,59 +76,19 @@ jobs:
             $zip.Dispose()
           }
       
-      - name: Calculate SHA512
-        id: hash
-        shell: pwsh
-        run: |
-          $hash = (Get-FileHash -Path "output/libdatadog-x64-windows.zip" -Algorithm SHA512).Hash.ToLower()
-          "SHA512_X64=$hash" | Out-File -FilePath $env:GITHUB_OUTPUT -Encoding utf8 -Append
-          Write-Host "x64 SHA512: $hash"
+      # Note: SHA512 is now calculated in the create-release job after creating the final zip
+      # This ensures the hash matches the actual release asset
       
       - name: Upload artifacts
         uses: actions/upload-artifact@6f51ac03b9356f520e9adb1b1b7802705f340c2b # v4.5.0
         with:
           name: libdatadog-x64-windows
-          path: output/libdatadog-x64-windows.zip
+          # Upload the directory, not the zip - we'll create the zip in the release step
+          # This avoids double-zipping by the artifact system
+          path: output/libdatadog-x64-windows/
           if-no-files-found: error
       
-      - name: Create release notes
-        shell: pwsh
-        env:
-          REF_NAME: ${{ github.ref_name }}
-          LIBDATADOG_VERSION: ${{ steps.version.outputs.LIBDATADOG_VERSION }}
-          SHA512_X64: ${{ steps.hash.outputs.SHA512_X64 }}
-        run: |
-          $notes = @"
-          # libdatadog-dotnet Release $env:REF_NAME
-
-          Custom libdatadog binaries for dd-trace-dotnet.
-
-          ## Components
-          
-          - **libdatadog version**: $env:LIBDATADOG_VERSION
-          - **datadog-profiling-ffi**: Profiling FFI library
-          
-          ## Artifacts
-          
-          - ``libdatadog-x64-windows.zip`` - Windows x64 binaries (SHA512: $env:SHA512_X64)
-          
-          ## Usage
-          
-          Update your vcpkg portfile to reference this release:
-          
-          ````cmake
-          set(LIBDATADOG_VERSION $env:REF_NAME)
-          set(LIBDATADOG_URL "https://github.com/DataDog/libdatadog-dotnet/releases/download/$env:REF_NAME/libdatadog-x64-windows.zip")
-          set(LIBDATADOG_HASH "$env:SHA512_X64")
-          ````
-          "@
-          $notes | Out-File -FilePath release-notes.md -Encoding utf8
-      
-      - name: Upload release notes
-        uses: actions/upload-artifact@6f51ac03b9356f520e9adb1b1b7802705f340c2b # v4.5.0
-        with:
-          name: release-notes
-          path: release-notes.md
+      # Release notes are now created in the create-release job after SHA512 calculation
 
   create-release:
     name: Create GitHub Release
@@ -147,21 +109,52 @@ jobs:
         run: |
           echo "=== Artifact directory structure ==="
           ls -R artifacts/
-          echo ""
-          echo "=== Checking if zip is nested ==="
-          if [ -f artifacts/libdatadog-x64-windows/libdatadog-x64-windows.zip ]; then
-            unzip -l artifacts/libdatadog-x64-windows/libdatadog-x64-windows.zip | head -20
-          fi
-      
-      - name: Read release notes
-        id: notes
+
+      - name: Create release zip
+        id: create_zip
         run: |
-          if [ -f artifacts/release-notes/release-notes.md ]; then
-            echo "NOTES_FILE=artifacts/release-notes/release-notes.md" >> $GITHUB_OUTPUT
-          else
-            echo "No release notes found, will use default"
-            echo "NOTES_FILE=" >> $GITHUB_OUTPUT
-          fi
+          echo "=== Creating release zip from artifact directory ==="
+          cd artifacts/libdatadog-x64-windows
+          zip -r ../../libdatadog-x64-windows.zip .
+          cd ../..
+
+          echo "=== Verifying zip structure ==="
+          unzip -l libdatadog-x64-windows.zip | head -20
+
+          echo "=== Calculating SHA512 ==="
+          SHA512=$(sha512sum libdatadog-x64-windows.zip | cut -d' ' -f1)
+          echo "SHA512_X64=$SHA512" >> $GITHUB_OUTPUT
+          echo "SHA512: $SHA512"
+      
+      - name: Create release notes
+        run: |
+          cat > release-notes.md << 'NOTES_EOF'
+          # libdatadog-dotnet Release ${{ github.ref_name }}
+
+          Custom libdatadog binaries for dd-trace-dotnet.
+
+          ## Components
+
+          - **libdatadog version**: ${{ needs.build-windows-x64.outputs.libdatadog_version }}
+          - **datadog-profiling-ffi**: Profiling FFI library
+
+          ## Artifacts
+
+          - `libdatadog-x64-windows.zip` - Windows x64 binaries (SHA512: ${{ steps.create_zip.outputs.SHA512_X64 }})
+
+          ## Usage
+
+          Update your vcpkg portfile to reference this release:
+
+          ```cmake
+          set(LIBDATADOG_VERSION ${{ github.ref_name }})
+          set(LIBDATADOG_URL "https://github.com/DataDog/libdatadog-dotnet/releases/download/${{ github.ref_name }}/libdatadog-x64-windows.zip")
+          set(LIBDATADOG_HASH "${{ steps.create_zip.outputs.SHA512_X64 }}")
+          ```
+          NOTES_EOF
+
+          echo "Release notes created:"
+          cat release-notes.md
       
       - name: Create or Update Release
         uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
@@ -174,8 +167,8 @@ jobs:
 
             // Read release notes
             let body = 'Release artifacts for libdatadog-dotnet';
-            const notesFile = '${{ steps.notes.outputs.NOTES_FILE }}';
-            if (notesFile && fs.existsSync(notesFile)) {
+            const notesFile = 'release-notes.md';
+            if (fs.existsSync(notesFile)) {
               body = fs.readFileSync(notesFile, 'utf8');
             }
 
@@ -231,8 +224,8 @@ jobs:
               }
             }
 
-            // Upload artifact
-            const artifactPath = 'artifacts/libdatadog-x64-windows/libdatadog-x64-windows.zip';
+            // Upload artifact (zip created in previous step)
+            const artifactPath = 'libdatadog-x64-windows.zip';
             const artifactName = 'libdatadog-x64-windows.zip';
 
             if (fs.existsSync(artifactPath)) {
