--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,26 +66,16 @@ jobs:
         run: |
           ./build.ps1 -LibdatadogVersion $env:LIBDATADOG_VERSION -Platform "x64-windows" -Clean
 
-          # Debug: Check the zip structure
-          Write-Host "`n=== Verifying zip structure ===" -ForegroundColor Cyan
-          if (Test-Path "output/libdatadog-x64-windows.zip") {
-            Add-Type -AssemblyName System.IO.Compression.FileSystem
-            $zip = [System.IO.Compression.ZipFile]::OpenRead("output/libdatadog-x64-windows.zip")
-            Write-Host "Root entries in zip:" -ForegroundColor Yellow
-            $zip.Entries | Select-Object -First 20 FullName | ForEach-Object { Write-Host "  $($_.FullName)" }
-            $zip.Dispose()
-          }
-      
-      # Note: SHA512 is now calculated in the create-release job after creating the final zip
-      # This ensures the hash matches the actual release asset
+      # Note: The zip is created in the create-release job from the uploaded directory
+      # SHA512 is calculated there to match the actual release asset
       
       - name: Upload artifacts
         uses: actions/upload-artifact@6f51ac03b9356f520e9adb1b1b7802705f340c2b # v4.5.0
         with:
           name: libdatadog-build-output
-          # Upload the output directory which contains libdatadog-x64-windows/
-          # This preserves the folder structure
-          path: output/
+          # Upload the directory without trailing slash to preserve folder name
+          # The zip file created by build.ps1 is only for local use
+          path: output/libdatadog-x64-windows
           if-no-files-found: error
       
       # Release notes are now created in the create-release job after SHA512 calculation
@@ -114,10 +104,10 @@ jobs:
         id: create_zip
         run: |
           echo "=== Creating release zip from artifact directory ==="
-          # The artifact now contains output/ directory with libdatadog-x64-windows/ inside
-          cd artifacts/libdatadog-build-output/output
-          zip -r ../../../libdatadog-x64-windows.zip libdatadog-x64-windows/
-          cd ../../..
+          # The artifact contains libdatadog-x64-windows/ directory
+          cd artifacts/libdatadog-build-output
+          zip -r ../../libdatadog-x64-windows.zip libdatadog-x64-windows/
+          cd ../..
 
           echo "=== Verifying zip structure ==="
           unzip -l libdatadog-x64-windows.zip | head -20
