--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,7 +64,7 @@ jobs:
         env:
           LIBDATADOG_VERSION: ${{ steps.version.outputs.LIBDATADOG_VERSION }}
         run: |
-          ./build.ps1 -LibdatadogVersion $env:LIBDATADOG_VERSION -Platform "x64-windows" -Clean
+          ./build.ps1 -LibdatadogVersion $env:LIBDATADOG_VERSION -Platform "x64-windows" -Clean -OutputDir "output/libdatadog-x64-windows"
 
       # Note: The zip is created in the create-release job from the uploaded directory
       # SHA512 is calculated there to match the actual release asset
@@ -72,9 +72,8 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@6f51ac03b9356f520e9adb1b1b7802705f340c2b # v4.5.0
         with:
-          name: libdatadog-build-output
+          name: libdatadog-x64-windows
           # Upload the directory without trailing slash to preserve folder name
-          # The zip file created by build.ps1 is only for local use
           path: output/libdatadog-x64-windows
           if-no-files-found: error
       
