--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -79,42 +79,117 @@ jobs:
       
       # Release notes are now created in the create-release job after SHA512 calculation
 
+  build-windows-x86:
+    name: Build Windows x86
+    runs-on: windows-latest
+    permissions:
+      contents: read
+    outputs:
+      libdatadog_version: ${{ steps.version.outputs.LIBDATADOG_VERSION }}
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+
+      - name: Setup Rust
+        run: |
+          # Install Rust using rustup (built into Windows runners)
+          rustup update stable
+          rustup default stable
+          rustup component add rustfmt clippy
+
+          # Add i686 (x86) target
+          rustup target add i686-pc-windows-msvc
+
+      - name: Verify Rust installation
+        run: |
+          rustc --version
+          cargo --version
+          rustup target list --installed
+
+      - name: Determine libdatadog version
+        id: version
+        shell: pwsh
+        env:
+          EVENT_NAME: ${{ github.event_name }}
+          INPUT_VERSION: ${{ github.event.inputs.libdatalog_version }}
+          REF_NAME: ${{ github.ref_name }}
+        run: |
+          if ($env:EVENT_NAME -eq "workflow_dispatch") {
+            $version = $env:INPUT_VERSION
+          } else {
+            $version = $env:REF_NAME
+            if (-not $version.StartsWith("v")) {
+              $version = "v25.0.0"
+            }
+          }
+          "LIBDATADOG_VERSION=$version" | Out-File -FilePath $env:GITHUB_OUTPUT -Encoding utf8 -Append
+          Write-Host "Building libdatadog version: $version"
+
+      - name: Build Windows x86
+        shell: pwsh
+        env:
+          LIBDATADOG_VERSION: ${{ steps.version.outputs.LIBDATADOG_VERSION }}
+        run: |
+          # Set environment for x86 build
+          $env:CARGO_BUILD_TARGET = "i686-pc-windows-msvc"
+          ./build.ps1 -LibdatadogVersion $env:LIBDATADOG_VERSION -Platform "x86-windows" -Clean -OutputDir "output/libdatadog-x86-windows"
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@6f51ac03b9356f520e9adb1b1b7802705f340c2b # v4.5.0
+        with:
+          name: libdatadog-x86-windows
+          path: output/libdatadog-x86-windows
+          if-no-files-found: error
+
   create-release:
     name: Create GitHub Release
-    needs: build-windows-x64
+    needs: [build-windows-x64, build-windows-x86]
     # Only create releases for version tag pushes, not manual triggers
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
     permissions:
       contents: write
-    
+
     steps:
       - name: Download all artifacts
         uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
         with:
           path: artifacts
-      
+
       - name: Display structure
         run: |
           echo "=== Artifact directory structure ==="
           ls -R artifacts/
 
-      - name: Create release zip
-        id: create_zip
+      - name: Create release zips
+        id: create_zips
         run: |
-          echo "=== Creating release zip from artifact directory ==="
-          # The artifact contains libdatadog-x64-windows/ directory
-          cd artifacts/libdatadog-build-output
+          echo "=== Creating x64 release zip ==="
+          cd artifacts/libdatadog-x64-windows
           zip -r ../../libdatadog-x64-windows.zip libdatadog-x64-windows/
           cd ../..
 
-          echo "=== Verifying zip structure ==="
+          echo "=== Creating x86 release zip ==="
+          cd artifacts/libdatadog-x86-windows
+          zip -r ../../libdatadog-x86-windows.zip libdatadog-x86-windows/
+          cd ../..
+
+          echo "=== Verifying x64 zip structure ==="
           unzip -l libdatadog-x64-windows.zip | head -20
 
-          echo "=== Calculating SHA512 ==="
-          SHA512=$(sha512sum libdatadog-x64-windows.zip | cut -d' ' -f1)
-          echo "SHA512_X64=$SHA512" >> $GITHUB_OUTPUT
-          echo "SHA512: $SHA512"
+          echo "=== Verifying x86 zip structure ==="
+          unzip -l libdatadog-x86-windows.zip | head -20
+
+          echo "=== Calculating SHA512 hashes ==="
+          SHA512_X64=$(sha512sum libdatadog-x64-windows.zip | cut -d' ' -f1)
+          SHA512_X86=$(sha512sum libdatadog-x86-windows.zip | cut -d' ' -f1)
+
+          echo "SHA512_X64=$SHA512_X64" >> $GITHUB_OUTPUT
+          echo "SHA512_X86=$SHA512_X86" >> $GITHUB_OUTPUT
+
+          echo "x64 SHA512: $SHA512_X64"
+          echo "x86 SHA512: $SHA512_X86"
       
       - name: Create release notes
         run: |
@@ -130,16 +205,29 @@ jobs:
 
           ## Artifacts
 
-          - `libdatadog-x64-windows.zip` - Windows x64 binaries (SHA512: ${{ steps.create_zip.outputs.SHA512_X64 }})
+          - `libdatadog-x64-windows.zip` - Windows x64 binaries (SHA512: ${{ steps.create_zips.outputs.SHA512_X64 }})
+          - `libdatadog-x86-windows.zip` - Windows x86 binaries (SHA512: ${{ steps.create_zips.outputs.SHA512_X86 }})
 
           ## Usage
+
+          ### For x64 (64-bit)
 
           Update your vcpkg portfile to reference this release:
 
           ```cmake
           set(LIBDATADOG_VERSION ${{ github.ref_name }})
           set(LIBDATADOG_URL "https://github.com/DataDog/libdatadog-dotnet/releases/download/${{ github.ref_name }}/libdatadog-x64-windows.zip")
-          set(LIBDATADOG_HASH "${{ steps.create_zip.outputs.SHA512_X64 }}")
+          set(LIBDATADOG_HASH "${{ steps.create_zips.outputs.SHA512_X64 }}")
+          ```
+
+          ### For x86 (32-bit)
+
+          Update your vcpkg portfile to reference this release:
+
+          ```cmake
+          set(LIBDATADOG_VERSION ${{ github.ref_name }})
+          set(LIBDATADOG_URL "https://github.com/DataDog/libdatadog-dotnet/releases/download/${{ github.ref_name }}/libdatadog-x86-windows.zip")
+          set(LIBDATADOG_HASH "${{ steps.create_zips.outputs.SHA512_X86 }}")
           ```
           NOTES_EOF
 
@@ -214,23 +302,27 @@ jobs:
               }
             }
 
-            // Upload artifact (zip created in previous step)
-            const artifactPath = 'libdatadog-x64-windows.zip';
-            const artifactName = 'libdatadog-x64-windows.zip';
+            // Upload artifacts (zips created in previous step)
+            const artifacts = [
+              { path: 'libdatadog-x64-windows.zip', name: 'libdatadog-x64-windows.zip' },
+              { path: 'libdatadog-x86-windows.zip', name: 'libdatadog-x86-windows.zip' }
+            ];
 
-            if (fs.existsSync(artifactPath)) {
-              const stats = fs.statSync(artifactPath);
-              console.log(`Uploading ${artifactName} (${stats.size} bytes)`);
+            for (const artifact of artifacts) {
+              if (fs.existsSync(artifact.path)) {
+                const stats = fs.statSync(artifact.path);
+                console.log(`Uploading ${artifact.name} (${stats.size} bytes)`);
 
-              await github.rest.repos.uploadReleaseAsset({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                release_id: release.data.id,
-                name: artifactName,
-                data: fs.readFileSync(artifactPath)
-              });
+                await github.rest.repos.uploadReleaseAsset({
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  release_id: release.data.id,
+                  name: artifact.name,
+                  data: fs.readFileSync(artifact.path)
+                });
 
-              console.log(`Uploaded ${artifactName}`);
-            } else {
-              throw new Error(`Artifact not found: ${artifactPath}`);
+                console.log(`Uploaded ${artifact.name}`);
+              } else {
+                throw new Error(`Artifact not found: ${artifact.path}`);
+              }
             }
