--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -112,7 +112,7 @@ jobs:
         shell: pwsh
         env:
           EVENT_NAME: ${{ github.event_name }}
-          INPUT_VERSION: ${{ github.event.inputs.libdatalog_version }}
+          INPUT_VERSION: ${{ github.event.inputs.libdatadog_version }}
           REF_NAME: ${{ github.ref_name }}
         run: |
           if ($env:EVENT_NAME -eq "workflow_dispatch") {
