--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,74 +16,20 @@ permissions:
   contents: read
 
 jobs:
-  build-windows-x64:
-    name: Build Windows x64
+  build-windows:
+    name: Build Windows ${{ matrix.arch }}
     runs-on: windows-latest
     permissions:
       contents: read
-    outputs:
-      libdatadog_version: ${{ steps.version.outputs.LIBDATADOG_VERSION }}
-    
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-      
-      - name: Setup Rust
-        run: |
-          # Install Rust using rustup (built into Windows runners)
-          rustup update stable
-          rustup default stable
-          rustup component add rustfmt clippy
-      
-      - name: Verify Rust installation
-        run: |
-          rustc --version
-          cargo --version
-      
-      - name: Determine libdatadog version
-        id: version
-        shell: pwsh
-        env:
-          EVENT_NAME: ${{ github.event_name }}
-          INPUT_VERSION: ${{ github.event.inputs.libdatadog_version }}
-          REF_NAME: ${{ github.ref_name }}
-        run: |
-          if ($env:EVENT_NAME -eq "workflow_dispatch") {
-            $version = $env:INPUT_VERSION
-          } else {
-            $version = $env:REF_NAME
-            if (-not $version.StartsWith("v")) {
-              $version = "v25.0.0"
-            }
-          }
-          "LIBDATADOG_VERSION=$version" | Out-File -FilePath $env:GITHUB_OUTPUT -Encoding utf8 -Append
-          Write-Host "Building libdatadog version: $version"
-      
-      - name: Build Windows x64
-        shell: pwsh
-        env:
-          LIBDATADOG_VERSION: ${{ steps.version.outputs.LIBDATADOG_VERSION }}
-        run: |
-          ./build.ps1 -LibdatadogVersion $env:LIBDATADOG_VERSION -Platform "x64-windows" -Clean -OutputDir "output/libdatadog-x64-windows"
-
-      # Note: The zip is created in the create-release job from the uploaded directory
-      # SHA512 is calculated there to match the actual release asset
-      
-      - name: Upload artifacts
-        uses: actions/upload-artifact@6f51ac03b9356f520e9adb1b1b7802705f340c2b # v4.5.0
-        with:
-          name: libdatadog-x64-windows
-          # Upload the directory without trailing slash to preserve folder name
-          path: output/libdatadog-x64-windows
-          if-no-files-found: error
-      
-      # Release notes are now created in the create-release job after SHA512 calculation
-
-  build-windows-x86:
-    name: Build Windows x86
-    runs-on: windows-latest
-    permissions:
-      contents: read
+    strategy:
+      matrix:
+        include:
+          - arch: x64
+            platform: x64-windows
+            target: x86_64-pc-windows-msvc
+          - arch: x86
+            platform: x86-windows
+            target: i686-pc-windows-msvc
     outputs:
       libdatadog_version: ${{ steps.version.outputs.LIBDATADOG_VERSION }}
 
@@ -93,19 +39,10 @@ jobs:
 
       - name: Setup Rust
         run: |
-          # Install Rust using rustup (built into Windows runners)
           rustup update stable
           rustup default stable
           rustup component add rustfmt clippy
-
-          # Add i686 (x86) target
-          rustup target add i686-pc-windows-msvc
-
-      - name: Verify Rust installation
-        run: |
-          rustc --version
-          cargo --version
-          rustup target list --installed
+          rustup target add ${{ matrix.target }}
 
       - name: Determine libdatadog version
         id: version
@@ -126,25 +63,24 @@ jobs:
           "LIBDATADOG_VERSION=$version" | Out-File -FilePath $env:GITHUB_OUTPUT -Encoding utf8 -Append
           Write-Host "Building libdatadog version: $version"
 
-      - name: Build Windows x86
+      - name: Build Windows ${{ matrix.arch }}
         shell: pwsh
         env:
           LIBDATADOG_VERSION: ${{ steps.version.outputs.LIBDATADOG_VERSION }}
+          CARGO_BUILD_TARGET: ${{ matrix.target }}
         run: |
-          # Set environment for x86 build
-          $env:CARGO_BUILD_TARGET = "i686-pc-windows-msvc"
-          ./build.ps1 -LibdatadogVersion $env:LIBDATADOG_VERSION -Platform "x86-windows" -Clean -OutputDir "output/libdatadog-x86-windows"
+          ./build.ps1 -LibdatadogVersion $env:LIBDATADOG_VERSION -Platform "${{ matrix.platform }}" -Clean -OutputDir "output/libdatadog-${{ matrix.platform }}"
 
       - name: Upload artifacts
         uses: actions/upload-artifact@6f51ac03b9356f520e9adb1b1b7802705f340c2b # v4.5.0
         with:
-          name: libdatadog-x86-windows
-          path: output/libdatadog-x86-windows
+          name: libdatadog-${{ matrix.platform }}
+          path: output/libdatadog-${{ matrix.platform }}
           if-no-files-found: error
 
   create-release:
     name: Create GitHub Release
-    needs: [build-windows-x64, build-windows-x86]
+    needs: build-windows
     # Only create releases for version tag pushes, not manual triggers
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
@@ -200,7 +136,7 @@ jobs:
 
           ## Components
 
-          - **libdatadog version**: ${{ needs.build-windows-x64.outputs.libdatadog_version }}
+          - **libdatadog version**: ${{ needs.build-windows.outputs.libdatadog_version }}
           - **datadog-profiling-ffi**: Profiling FFI library
 
           ## Artifacts
