--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,13 +50,14 @@ jobs:
         env:
           EVENT_NAME: ${{ github.event_name }}
           INPUT_VERSION: ${{ github.event.inputs.libdatadog_version }}
-          REF_NAME: ${{ github.ref_name }}
         run: |
           if ($env:EVENT_NAME -eq "workflow_dispatch") {
             $version = $env:INPUT_VERSION
           } else {
-            $version = $env:REF_NAME
-            if (-not $version.StartsWith("v")) {
+            # For tag pushes, read version from version.txt
+            if (Test-Path "version.txt") {
+              $version = (Get-Content "version.txt" -Raw).Trim()
+            } else {
               $version = "v25.0.0"
             }
           }
