--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,6 +51,15 @@ jobs:
             platform: aarch64-alpine-linux-musl
             target: aarch64-unknown-linux-musl
             os: ubuntu-latest
+          # macOS builds
+          - arch: x64
+            platform: x86_64-apple-darwin
+            target: x86_64-apple-darwin
+            os: macos-13
+          - arch: arm64
+            platform: aarch64-apple-darwin
+            target: aarch64-apple-darwin
+            os: macos-latest
     outputs:
       libdatadog_version: ${{ steps.version.outputs.LIBDATADOG_VERSION }}
 
@@ -74,13 +83,19 @@ jobs:
           # Install target-specific binutils for stripping
           sudo apt-get update
           case "${{ matrix.target }}" in
-            aarch64-*)
+            aarch64-*-linux-*)
               sudo apt-get install -y binutils-aarch64-linux-gnu
               ;;
             x86_64-*-musl)
               sudo apt-get install -y musl-tools
               ;;
           esac
+
+      - name: Add macOS target (macOS only)
+        if: runner.os == 'macOS' && matrix.target != matrix.arch
+        run: |
+          # For cross-compiling between x86_64 and aarch64 on macOS
+          rustup target add ${{ matrix.target }}
 
       - name: Determine libdatadog version
         id: version
@@ -111,6 +126,7 @@ jobs:
             pwsh -Command "./build.ps1 -LibdatadogVersion '${LIBDATADOG_VERSION}' -Platform '${{ matrix.platform }}' -Clean -OutputDir 'output/libdatadog-${{ matrix.platform }}'"
           else
             chmod +x build.sh
+            # For macOS, don't use cross tool - build natively or with native cargo cross-compilation
             ./build.sh --version "$LIBDATADOG_VERSION" --platform "${{ matrix.platform }}" --clean --output "output/libdatadog-${{ matrix.platform }}"
           fi
         shell: bash
@@ -175,6 +191,16 @@ jobs:
           tar -czf ../../libdatadog-aarch64-alpine-linux-musl.tar.gz libdatadog-aarch64-alpine-linux-musl/
           cd ../..
 
+          echo "=== Creating macOS x86_64-apple-darwin tar.gz ==="
+          cd artifacts/libdatadog-x86_64-apple-darwin
+          tar -czf ../../libdatadog-x86_64-apple-darwin.tar.gz libdatadog-x86_64-apple-darwin/
+          cd ../..
+
+          echo "=== Creating macOS aarch64-apple-darwin tar.gz ==="
+          cd artifacts/libdatadog-aarch64-apple-darwin
+          tar -czf ../../libdatadog-aarch64-apple-darwin.tar.gz libdatadog-aarch64-apple-darwin/
+          cd ../..
+
           echo "=== Calculating SHA512 hashes ==="
           SHA512_WIN_X64=$(sha512sum libdatadog-x64-windows.zip | cut -d' ' -f1)
           SHA512_WIN_X86=$(sha512sum libdatadog-x86-windows.zip | cut -d' ' -f1)
@@ -182,6 +208,8 @@ jobs:
           SHA512_LINUX_X64_MUSL=$(sha512sum libdatadog-x86_64-alpine-linux-musl.tar.gz | cut -d' ' -f1)
           SHA512_LINUX_ARM64_GNU=$(sha512sum libdatadog-aarch64-unknown-linux-gnu.tar.gz | cut -d' ' -f1)
           SHA512_LINUX_ARM64_MUSL=$(sha512sum libdatadog-aarch64-alpine-linux-musl.tar.gz | cut -d' ' -f1)
+          SHA512_MACOS_X64=$(sha512sum libdatadog-x86_64-apple-darwin.tar.gz | cut -d' ' -f1)
+          SHA512_MACOS_ARM64=$(sha512sum libdatadog-aarch64-apple-darwin.tar.gz | cut -d' ' -f1)
 
           echo "SHA512_WIN_X64=$SHA512_WIN_X64" >> $GITHUB_OUTPUT
           echo "SHA512_WIN_X86=$SHA512_WIN_X86" >> $GITHUB_OUTPUT
@@ -189,6 +217,8 @@ jobs:
           echo "SHA512_LINUX_X64_MUSL=$SHA512_LINUX_X64_MUSL" >> $GITHUB_OUTPUT
           echo "SHA512_LINUX_ARM64_GNU=$SHA512_LINUX_ARM64_GNU" >> $GITHUB_OUTPUT
           echo "SHA512_LINUX_ARM64_MUSL=$SHA512_LINUX_ARM64_MUSL" >> $GITHUB_OUTPUT
+          echo "SHA512_MACOS_X64=$SHA512_MACOS_X64" >> $GITHUB_OUTPUT
+          echo "SHA512_MACOS_ARM64=$SHA512_MACOS_ARM64" >> $GITHUB_OUTPUT
 
           echo "Windows x64 SHA512: $SHA512_WIN_X64"
           echo "Windows x86 SHA512: $SHA512_WIN_X86"
@@ -196,6 +226,8 @@ jobs:
           echo "Linux x64 MUSL SHA512: $SHA512_LINUX_X64_MUSL"
           echo "Linux ARM64 GNU SHA512: $SHA512_LINUX_ARM64_GNU"
           echo "Linux ARM64 MUSL SHA512: $SHA512_LINUX_ARM64_MUSL"
+          echo "macOS x64 SHA512: $SHA512_MACOS_X64"
+          echo "macOS ARM64 SHA512: $SHA512_MACOS_ARM64"
       
       - name: Create release notes
         run: |
@@ -220,6 +252,10 @@ jobs:
           - `libdatadog-x86_64-alpine-linux-musl.tar.gz` - Linux x64 (musl/Alpine) (SHA512: ${{ steps.create_archives.outputs.SHA512_LINUX_X64_MUSL }})
           - `libdatadog-aarch64-unknown-linux-gnu.tar.gz` - Linux ARM64 (glibc) (SHA512: ${{ steps.create_archives.outputs.SHA512_LINUX_ARM64_GNU }})
           - `libdatadog-aarch64-alpine-linux-musl.tar.gz` - Linux ARM64 (musl/Alpine) (SHA512: ${{ steps.create_archives.outputs.SHA512_LINUX_ARM64_MUSL }})
+
+          ### macOS
+          - `libdatadog-x86_64-apple-darwin.tar.gz` - macOS x64 (Intel) (SHA512: ${{ steps.create_archives.outputs.SHA512_MACOS_X64 }})
+          - `libdatadog-aarch64-apple-darwin.tar.gz` - macOS ARM64 (Apple Silicon) (SHA512: ${{ steps.create_archives.outputs.SHA512_MACOS_ARM64 }})
 
           ## Usage
 
@@ -344,7 +380,10 @@ jobs:
               { path: 'libdatadog-x86_64-unknown-linux-gnu.tar.gz', name: 'libdatadog-x86_64-unknown-linux-gnu.tar.gz' },
               { path: 'libdatadog-x86_64-alpine-linux-musl.tar.gz', name: 'libdatadog-x86_64-alpine-linux-musl.tar.gz' },
               { path: 'libdatadog-aarch64-unknown-linux-gnu.tar.gz', name: 'libdatadog-aarch64-unknown-linux-gnu.tar.gz' },
-              { path: 'libdatadog-aarch64-alpine-linux-musl.tar.gz', name: 'libdatadog-aarch64-alpine-linux-musl.tar.gz' }
+              { path: 'libdatadog-aarch64-alpine-linux-musl.tar.gz', name: 'libdatadog-aarch64-alpine-linux-musl.tar.gz' },
+              // macOS
+              { path: 'libdatadog-x86_64-apple-darwin.tar.gz', name: 'libdatadog-x86_64-apple-darwin.tar.gz' },
+              { path: 'libdatadog-aarch64-apple-darwin.tar.gz', name: 'libdatadog-aarch64-apple-darwin.tar.gz' }
             ];
 
             for (const artifact of artifacts) {
