--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,13 +1,14 @@
 name: Release
 
 on:
-  push:
-    tags:
-      - 'v*'
   workflow_dispatch:
     inputs:
       libdatadog_version:
         description: 'Libdatadog version to build (e.g., v25.0.0). Leave empty to use latest from libdatadog repository.'
+        required: false
+        default: ''
+      release_version:
+        description: 'Release version to create (e.g., v1.0.0). Leave empty to skip release creation. Must be a valid semantic version tag.'
         required: false
         default: ''
       feature_preset:
@@ -159,13 +160,45 @@ jobs:
   create-release:
     name: Create GitHub Release
     needs: build
-    # Only create releases for version tag pushes, not manual triggers
-    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
+    # Only create releases when release_version parameter is provided
+    if: github.event.inputs.release_version != ''
     runs-on: ubuntu-latest
     permissions:
       contents: write
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          fetch-depth: 0  # Fetch all history for tag creation
+
+      - name: Validate and setup release version
+        id: setup_release
+        run: |
+          RELEASE_TAG="${{ github.event.inputs.release_version }}"
+          echo "Creating release: $RELEASE_TAG"
+
+          # Validate tag format (must be vX.Y.Z)
+          if ! echo "$RELEASE_TAG" | grep -qE '^v[0-9]+\.[0-9]+\.[0-9]+$'; then
+            echo "Error: release_version must be in format vX.Y.Z (e.g., v1.0.0)"
+            echo "Provided: $RELEASE_TAG"
+            exit 1
+          fi
+
+          # Check if tag already exists
+          if git rev-parse "$RELEASE_TAG" >/dev/null 2>&1; then
+            echo "Tag $RELEASE_TAG already exists"
+          else
+            echo "Creating tag $RELEASE_TAG"
+            git config user.name "github-actions[bot]"
+            git config user.email "github-actions[bot]@users.noreply.github.com"
+            git tag -a "$RELEASE_TAG" -m "Release $RELEASE_TAG"
+            git push origin "$RELEASE_TAG"
+          fi
+
+          echo "RELEASE_TAG=$RELEASE_TAG" >> $GITHUB_OUTPUT
+          echo "Release tag: $RELEASE_TAG"
+
       - name: Download all artifacts
         uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
         with:
@@ -250,7 +283,7 @@ jobs:
       - name: Create release notes
         run: |
           cat > release-notes.md << 'NOTES_EOF'
-          # libdatadog-dotnet Release ${{ github.ref_name }}
+          # libdatadog-dotnet Release ${{ steps.setup_release.outputs.RELEASE_TAG }}
 
           Custom libdatadog binaries for dd-trace-dotnet.
 
@@ -280,40 +313,40 @@ jobs:
           ### Windows x64
           Update your vcpkg portfile to reference this release:
           ```cmake
-          set(LIBDATADOG_VERSION ${{ github.ref_name }})
-          set(LIBDATADOG_URL "https://github.com/DataDog/libdatadog-dotnet/releases/download/${{ github.ref_name }}/libdatadog-x64-windows.zip")
+          set(LIBDATADOG_VERSION ${{ steps.setup_release.outputs.RELEASE_TAG }})
+          set(LIBDATADOG_URL "https://github.com/DataDog/libdatadog-dotnet/releases/download/${{ steps.setup_release.outputs.RELEASE_TAG }}/libdatadog-x64-windows.zip")
           set(LIBDATADOG_HASH "${{ steps.create_archives.outputs.SHA512_WIN_X64 }}")
           ```
 
           ### Windows x86
           Update your vcpkg portfile to reference this release:
           ```cmake
-          set(LIBDATADOG_VERSION ${{ github.ref_name }})
-          set(LIBDATADOG_URL "https://github.com/DataDog/libdatadog-dotnet/releases/download/${{ github.ref_name }}/libdatadog-x86-windows.zip")
+          set(LIBDATADOG_VERSION ${{ steps.setup_release.outputs.RELEASE_TAG }})
+          set(LIBDATADOG_URL "https://github.com/DataDog/libdatadog-dotnet/releases/download/${{ steps.setup_release.outputs.RELEASE_TAG }}/libdatadog-x86-windows.zip")
           set(LIBDATADOG_HASH "${{ steps.create_archives.outputs.SHA512_WIN_X86 }}")
           ```
 
           ### Linux x64 (glibc)
           ```bash
-          wget https://github.com/DataDog/libdatadog-dotnet/releases/download/${{ github.ref_name }}/libdatadog-x86_64-unknown-linux-gnu.tar.gz
+          wget https://github.com/DataDog/libdatadog-dotnet/releases/download/${{ steps.setup_release.outputs.RELEASE_TAG }}/libdatadog-x86_64-unknown-linux-gnu.tar.gz
           echo "${{ steps.create_archives.outputs.SHA512_LINUX_X64_GNU }}  libdatadog-x86_64-unknown-linux-gnu.tar.gz" | sha512sum -c
           ```
 
           ### Linux x64 (musl/Alpine)
           ```bash
-          wget https://github.com/DataDog/libdatadog-dotnet/releases/download/${{ github.ref_name }}/libdatadog-x86_64-alpine-linux-musl.tar.gz
+          wget https://github.com/DataDog/libdatadog-dotnet/releases/download/${{ steps.setup_release.outputs.RELEASE_TAG }}/libdatadog-x86_64-alpine-linux-musl.tar.gz
           echo "${{ steps.create_archives.outputs.SHA512_LINUX_X64_MUSL }}  libdatadog-x86_64-alpine-linux-musl.tar.gz" | sha512sum -c
           ```
 
           ### Linux ARM64 (glibc)
           ```bash
-          wget https://github.com/DataDog/libdatadog-dotnet/releases/download/${{ github.ref_name }}/libdatadog-aarch64-unknown-linux-gnu.tar.gz
+          wget https://github.com/DataDog/libdatadog-dotnet/releases/download/${{ steps.setup_release.outputs.RELEASE_TAG }}/libdatadog-aarch64-unknown-linux-gnu.tar.gz
           echo "${{ steps.create_archives.outputs.SHA512_LINUX_ARM64_GNU }}  libdatadog-aarch64-unknown-linux-gnu.tar.gz" | sha512sum -c
           ```
 
           ### Linux ARM64 (musl/Alpine)
           ```bash
-          wget https://github.com/DataDog/libdatadog-dotnet/releases/download/${{ github.ref_name }}/libdatadog-aarch64-alpine-linux-musl.tar.gz
+          wget https://github.com/DataDog/libdatadog-dotnet/releases/download/${{ steps.setup_release.outputs.RELEASE_TAG }}/libdatadog-aarch64-alpine-linux-musl.tar.gz
           echo "${{ steps.create_archives.outputs.SHA512_LINUX_ARM64_MUSL }}  libdatadog-aarch64-alpine-linux-musl.tar.gz" | sha512sum -c
           ```
           NOTES_EOF
@@ -324,7 +357,7 @@ jobs:
       - name: Create or Update Release
         uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
         env:
-          RELEASE_TAG: ${{ github.ref_name }}
+          RELEASE_TAG: ${{ steps.setup_release.outputs.RELEASE_TAG }}
         with:
           script: |
             const fs = require('fs');
